added plan model and ability to create the default plan on the fly, if one does not exist.
added terms of service check on signup model.

marking signup record as completed (via completed_at) instead of
destroying during customer creation. also, associating signup record
with the customer.

cleanup the signup subscription javascript to assign payment nonce and
type to signup variables in the form, instead of relying on Braintree's
default behaviour for the Dropin UI.

capturing the payment type, "CreditCard" or "PayPal", but be nice to
have data.

--- a/app/views/signups/subscription.html.erb
+++ b/app/views/signups/subscription.html.erb
@@ -1,9 +1,10 @@
-<%= form_tag update_subscription_signup_path(@signup), method: :put do %>
-  <% if @signup.errors[:base].present? %>
-    <div class="alert alert-danger"><%= @signup.errors[:base].join(" and ") %></div>
-  <% end %>
+<%= simple_form_for @signup, wrapper: :horizontal_input_group, url: update_subscription_signup_path(@signup), method: :put do |f| %>
+  <%= f.error :base, class: 'alert alert-danger' %>
   <div id='braintree-form-inputs'><%# this is populated by braintree javascript, DO NOT REMOVE %></div>
-  <%= submit_tag "Make the magic happen", class: 'btn btn-primary' %>
+  <%= f.input :terms_of_service, as: :boolean, label: " I agree with the terms of service" %>
+  <%= f.input :payment_method_nonce, as: :hidden %>
+  <%= f.input :payment_method_type, as: :hidden %>
+  <%= f.button :submit, "Make the magic happen", class: 'btn btn-primary' %>
 <% end %>
 
 <script src="https://js.braintreegateway.com/v2/braintree.js"></script>
