--- a/app/views/signups/subscription.html.erb
+++ b/app/views/signups/subscription.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for @signup, wrapper: :horizontal_input_group, url: update_subscription_signup_path(@signup), method: :put do |f| %>
+<%= simple_form_for @signup, url: update_subscription_signup_path(@signup), method: :put do |f| %>
   <%= f.error :base, class: 'alert alert-danger' %>
   <div id='braintree-form-inputs'><%# this is populated by braintree javascript, DO NOT REMOVE %></div>
   <%= f.input :terms_of_service, as: :boolean, label: " I agree with the terms of service" %>
