--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -12,7 +12,7 @@
           <tr>
             <td><%= month.label %></td>
             <td><%= month.media_count %></td>
-            <td><%= render partial: "dashboards/month/#{month.template}", object: month %></td>
+            <td><%= render partial: "dashboards/month/#{month.template}", locals: {month: month} %></td>
           </tr>
         <% end %>
       </tbody>
