cleanup the views for the signup process, also created pages and signup layouts to give more styling functionality

--- a/app/views/layouts/signup.html.erb
+++ b/app/views/layouts/signup.html.erb
@@ -14,7 +14,9 @@
 </head>
 <body>
   <div class="container">
-    <p>THIS IS APPLICATION LAYOUT</p>
+    <div class="jumbotron">
+      <h2>Haaave <small>all your memories in a neat little digital booklet</small></h2>
+    </div>
     <% flash.each do |key, value| %>
       <%= content_tag :div, value, class: "flash #{key}" %>
     <% end %>
