--- a/app/views/dashboards/build.html.erb
+++ b/app/views/dashboards/build.html.erb
@@ -1,1 +1,16 @@
-<p>Gathering all your good stuff</p>
+<div class="row">
+  <div class="col-xs-4"></div>
+  <div class="col-xs-4">
+    <div class="well">
+      <div class="media dashboard--gathering">
+        <div class="media-left">
+          <span class="glyphicon glyphicon-camera media-object" aria-hidden="true" ></span>
+        </div>
+        <div class="media-body">
+          <h5 class="media-heading">Gathering all your good stuff</h5>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="col-xs-4"></div>
+</div>
