--- a/app/views/signups/subscription.html.erb
+++ b/app/views/signups/subscription.html.erb
@@ -1,15 +1,22 @@
-<div id='plan'>
-  <h2>$<%= @plan.amount %></h2>
-  <p><%= @plan.duration %> month subscription</p>
-  <p>$<%= @plan.amount %> billed every <%= @plan.duration %> months</p>
-</div>
+<div class="row">
+  <div class="col-xs-3"></div>
+  <div class="col-xs-6">
+    <div id='plan'>
+      <h2>$<%= @plan.amount %></h2>
+      <p><%= @plan.duration %> month subscription</p>
+      <p>$<%= @plan.amount %> billed every <%= @plan.duration %> months</p>
+    </div>
 
-<%= simple_form_for @signup, url: update_subscription_signup_path(@signup), method: :put do |f| %>
-  <%= f.error :base, class: 'alert alert-danger' %>
-  <div id='braintree-form-inputs'><%# this is populated by braintree javascript, DO NOT REMOVE %></div>
-  <%= f.input :payment_method_nonce, as: :hidden %>
-  <%= f.input :payment_method_type, as: :hidden %>
-  <%= f.button :submit, "Make the magic happen", class: 'btn btn-primary' %>
-<% end %>
+    <%= simple_form_for @signup, url: update_subscription_signup_path(@signup), method: :put do |f| %>
+      <%= f.error :base, class: 'alert alert-danger' %>
+      <div id='braintree-form-inputs'><%# this is populated by braintree javascript, DO NOT REMOVE %></div>
+      <%= f.input :payment_method_nonce, as: :hidden %>
+      <%= f.input :payment_method_type, as: :hidden %>
+      <%= f.button :submit, "Make the magic happen", class: 'btn btn-primary center-block' %>
+    <% end %>
+
+  </div>
+  <div class="col-xs-3"></div>
+
 
 <script src="https://js.braintreegateway.com/v2/braintree.js"></script>
