minor layout change for dashboard

--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
-  <p> account stuff / notifications go here </p>
+  <div class="col-xs-12"><p> account stuff / notifications go here </p></div>
 </div>
 
 <% @dashboard.years.each do |year| %>
